--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,71 @@
-# build output
+# Build output
 dist/
 build/
 
-# generated types
+# Astro
 .astro/
+.vercel/
+.output/
 
-# dependencies
+# Dependencies
 node_modules/
 
-# logs
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-*.log
 
-# environment variables
+# Environment variables
 .env
 .env.*
 !.env.example
 
-# macOS-specific files
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# IDE - VSCode
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-!.vscode/settings.json
-!.vscode/tasks.json
 !.vscode/launch.json
-
-# IDE - JetBrains
 .idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Deploy related
+# Project specific
+monitor.db
+server/*.db
+server/*.db-journal
 deploy/client.tar.gz
-deploy/client/
-*.tar.gz
+deploy/client/*
+!deploy/client/package.json
+!deploy/client/tsconfig.client.json
 
-# Temporary files
-*.swp
-*.swo
-*~
+# TypeScript
+*.tsbuildinfo
+tsconfig.tsbuildinfo
+tsconfig.*.tsbuildinfo
 
-# Testing
-coverage/
-
-# Local Netlify folder
-.netlify
+# Development
+*.local
+.env.local
+.env.*.local
 
 # Cache
 .cache/
+.temp/
+.vite/
+
+# Build artifacts
+client/dist/
+client/build/
+server/dist/
+server/build/
+dist-ssr/
+
+# System files
+.DS_Store
+Thumbs.db
