--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ssh2": "^1.16.0",
     "tailwindcss": "^3.4.1",
     "vite": "^6.0.11",
+    "winston": "^3.17.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
@@ -71,7 +72,7 @@
     "@types/node": "^20.11.5",
     "@types/ws": "^8.5.14",
     "tailwind-scrollbar": "^3.1.0",
-    "tsx": "^4.7.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.3.3"
   },
   "description": "```sh npm create astro@latest -- --template basics ```",
