--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "node ./dist/server/entry.mjs",
+    "start": "node dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -15,8 +15,6 @@
     "prod": "npm run build && npm run start"
   },
   "dependencies": {
-    "@astrojs/react": "^3.6.3",
-    "@astrojs/tailwind": "^5.1.0",
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
@@ -24,8 +22,6 @@
     "@types/express": "^4.17.21",
     "@types/node-cache": "^4.1.3",
     "@types/node-fetch": "^2.6.12",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io-client": "^1.4.36",
     "@types/ssh2": "^1.15.4",
@@ -33,7 +29,6 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "antd": "^5.23.2",
-    "astro": "^4.2.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
@@ -50,9 +45,9 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "node-pty": "^1.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -65,15 +60,22 @@
     "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
+    "@astrojs/node": "^9.0.2",
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/tailwind": "^6.0.0",
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.17.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/ws": "^8.5.14",
+    "astro": "^5.2.1",
+    "esbuild": "0.23.1",
     "tailwind-scrollbar": "^3.1.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.3"
   },
   "description": "```sh npm create astro@latest -- --template basics ```",
   "main": "index.js",
