add mutual option in workflow

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,6 +9,8 @@ on:
       - 'LICENSE'
   pull_request:
     branches: [ "main" ]
+  # Enable manual trigger
+  workflow_dispatch:
 
 env:
   # Update with your DockerHub username/repository
